--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
     <head>
         <meta charset="utf-8">
         <title>Honey is yummy :* </title>
+        <meta name='viewport' content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="fonts/SeasideResortNF/SEASRN__.ttf">
         <link rel="stylesheet" type="text/css" href="honey.css">
     </head>
     <body>
-        <div class ="header-section-1">   
-            <div class="header-section-2">
+        <div class ="main-header-section">   
+            <div class="header-section-1">
                 <a href="#contact"><b>Contact</b></a> &nbsp;&nbsp;&nbsp; 
                 <a href="#about"><b>About</b></a>&nbsp;&nbsp;&nbsp;
             </div> 
-            <div class="header-section-3">
+            <div class="header-section-2">
                     <h1 class="honey-font">
                             Honey
                     </h1>
@@ -31,7 +32,6 @@
                     <i><b>“But honey is so much more.”</b></i>
                     <br/>
                     <h3>What is honey..?</h3>
-
             </p>
             <p class="content">
                 <b>Honey</b>, a sweet, viscous liquid food, dark golden in colour, is produced in the honey sacs of various bees from the nectar of flowers.
@@ -61,15 +61,14 @@
         </div>
         <div class="body-section-4">
             <div id="contact">
-                <p><b>Contact:</b></p><br/>
-                &nbsp;&nbsp;&nbsp;
-                <p>Honey Mariam Babu: </p>
-                <p>&nbsp;+91 xxxxxxxxxx</p><br/>
+                <p><b>Contact:</b></p>                
+                <p class="desc-contact">Honey Mariam Babu:
+                &nbsp;+91 xxxxxxxxxx</p><br/>
 
             </div>
             <div id="about">
-                <p><b>About</b></p><br/>
-                <p>I am a jobless person who likes Honey very much.</p>
+                <p><b>About</b></p>
+                <p id="desc-about">I am a jobless person who likes Honey very much.</p>
             </div>
         </div>
     </body>
